--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,11 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Add APT Repository
-        run: echo "deb http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal main\ndeb-src http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal main" | tee /etc/apt/sources.list.d/deadsnakes.list && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys F23C5A6CF475977595C89F51BA6932366A755776
+        run: echo "deb http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal main\ndeb-src http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal main" | sudo tee /etc/apt/sources.list.d/deadsnakes.list && apt-key adv --keyserver keyserver.ubuntu.com --recv-keys F23C5A6CF475977595C89F51BA6932366A755776
       - name: Update APT Repository
-        run: apt-get update
+        run: sudo apt-get update
       - name: Install Python
-        run: apt-get install -y --no-install-recommends python3.10-venv
+        run: sudo apt-get install -y --no-install-recommends python3.10-venv
       - name: Install PIP
         run: python3.10 -m ensurepip && python3.10 -m pip install --upgrade pip
       - name: Install pylint
