--- a/.pylintrc
+++ b/.pylintrc
@@ -145,7 +145,8 @@ disable=print-statement,
         exception-escape,
         comprehension-escape,
 		too-few-public-methods,
-		line-too-long
+		line-too-long,
+		no-self-use
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
