--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ keras==2.8.0rc0
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 numpy==1.21.5
+Pillow==9.0.0
 opencv-python==4.5.5.62
 Pillow==8.4.0
 python-magic==0.4.24
