--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-models/preprocessed/* filter=lfs diff=lfs merge=lfs -text
+models/preprocessed/*/variables/variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
 **/variables/variables-data* filter=lfs diff=lfs merge=lfs -text
 variables.data-00000-of-00001 filter=lfs diff=lfs merge=lfs -text
